# fastapi-react-app

./: .gitignore
.github/: coderabbit.yaml
.github/workflows/: coderabbit.yml  create-pr-to-master.yaml
backend/: .gitignore  __init__.py  crud.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  schemas.py
backend/routes/: heroes.py
backend/tests/: test_crud.py  test_main.py
front/: package-lock.json  package.json
front/src/: App.js
front/src/components/: TestComponent.js
front/src/components/elements/: BasicMenu.js
front/src/components/hooks/: userLogin.js
front/src/components/pages/: Home.js  Login.js  LoginFailed.js  Register.js  Result.js  Submit.js
front/src/components/providers/: LoginUserProvider.js
front/src/components/templates/: Footer.js  Form.js  Header.js
