[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
httpx = "^0.28.1"
sqlalchemy = "^2.0.41"
sqlmodel = "^0.0.24"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
